Chaneg default collapsed, minor chnage to project page, fix edge case in file context, update color, update sidebar

--- a/src/components/pages/project/_projectPage.css
+++ b/src/components/pages/project/_projectPage.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   overflow: hidden;
-  padding-top: 75%; /* Aspect ratio: 4:3 (height / width * 100) */
+  padding-top: 80%; /* Aspect ratio: 4:3 (height / width * 100) */
 }
 
 .thumbnail {
@@ -10,8 +10,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: auto;
-  max-width: 100%;
+  height: 100%;
   object-fit: cover; /* Scale the image to cover the container */
   object-position: center; /* Center the image within the container */
 }
